# pyds_ext

./: CHANGELOG.md  LICENSE  README.md  build.sh  pyds_bbox_meta.cpp  pyproject.toml  setup.py
.github/workflows/: build.yml  deepstream-jetson.yml  release-info.yml  release.yml
.scripts/: build.sh
