[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pybind11>=2.6.0",
]
build-backend = "setuptools.build_meta"

[tool.commitizen]
name                     = "cz_conventional_commits"
version = "1.2.1"
tag_format               = "$version"
# keep this in sync with the bump workflow to avoid
# re-triggering it after commitizen bump command pushes
bump_message             = "release: $current_version → $new_version"
update_changelog_on_bump = true
annotated_tag            = true
version_files = [
  "setup.py:^VERSION\\s+=\\s+['\"](?:\\d+.?){3}.*?['\"]$",
]
